--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "framer-motion": "^9.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
