--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -13,12 +13,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "animate.css": "^4.1.1",
     "framer-motion": "^9.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
